Add WORKSPACE_PATH to README .env example and env.example file

--- a/env.example
+++ b/env.example
@@ -20,9 +20,11 @@ OUTLOOK_REDIRECT_URI=https://login.microsoftonline.com/common/oauth2/nativeclien
 OUTLOOK_TOKEN_PATH=token.json
 
 # OPTIONAL - Workspace path for file operations
-# Set this to restrict file I/O to a specific directory
+# Set this to restrict file I/O to a specific directory for security
+# All file attachments and downloads are restricted to this directory
 # Example: WORKSPACE_PATH=./workspace
-# WORKSPACE_PATH=
+# If not set, file attachment features will be disabled
+WORKSPACE_PATH=./workspace
 
 # OPTIONAL - Backend API settings (for token provider)
 # Only needed if using a backend token provider
